--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
