--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
     "validator": "^13.0.0",
-    "yarn": "^1.22.4"
+    "yarn": "^1.22.4",
+    "env-cmd": "^10.1.0"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.2"
   },
   "engines": {
