--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "user-registration-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "env-cmd -f ./.env nodemon src/app.js"
+    "start": "env-cmd -f ./.env node src/app.js"
   },
   "author": "Frank Atukunda",
   "license": "MIT",
