--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb+srv://m001-student:mandsaur123@whereismytransport-sfnlr.mongodb.net/user-registration?retryWrites=true&w=majority
-JWT_KEY=WhereIsMyTransport
+MONGODB_URL= paste your mongodb access key here
+JWT_KEY= your personal phrase
